<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <group android:checkableBehavior="single"
        android:id="@+id/horizontal_step_view_group">
        <item
            android:id="@+id/action_horizontal_basic"
            android:title="@string/menu_horizontal_basic" />
    </group>
    <group android:checkableBehavior="single"
        android:id="@+id/vertical_step_view_group">
        <item
            android:id="@+id/action_vertical_basic_reverse"
            android:title="@string/menu_vertical_basic_reverse" />
        <item
            android:id="@+id/action_vertical_basic_forward"
            android:title="@string/menu_vertical_basic_forward" />
    </group>
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/action_custom"
            android:title="@string/menu_customization" />
        <item
            android:id="@+id/action_state_changes"
            android:title="@string/menu_state_change" />
    </group>
</menu>