<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context=".fragments.StateChangeFragment">

    <com.vinay.stepview.HorizontalStepView
        android:id="@+id/horizontal_step_view"
        android:layout_width="match_parent"
        android:background="@color/colorPrimary"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:paddingBottom="8dp"
        />

    <TextView
        android:id="@+id/description_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="24dp"
        android:paddingTop="24dp"
        android:paddingEnd="8dp"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:paddingStart="8dp"
        android:text="@string/state_change_description"/>

    <Button
        android:id="@+id/toggle_state_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/description_text"
        android:layout_centerHorizontal="true"
        android:text="@string/state_change_mark_completed"
        android:textSize="13sp"/>

    <Button
        android:id="@+id/prev_step_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/description_text"
        android:layout_toLeftOf="@id/toggle_state_btn"
        android:layout_toStartOf="@id/toggle_state_btn"
        android:text="@string/state_change_prev_btn"
        android:textSize="13sp"/>


    <Button
        android:id="@+id/next_step_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/description_text"
        android:layout_toEndOf="@id/toggle_state_btn"
        android:layout_toRightOf="@id/toggle_state_btn"
        android:text="@string/state_change_next_btn"
        android:textSize="13sp"/>

</RelativeLayout>